Tweaked scan tables to avoid spillover width.

--- a/public/stylesheets/doctree.css
+++ b/public/stylesheets/doctree.css
@@ -11,7 +11,7 @@ ul.document, ul.documents {
 }
 
 table.scanlist {
-    font-size: 12px;
+    font-size: 11px;
     margin-left: 20px;
     margin-top: 5px;
     text-align: center;
@@ -28,14 +28,14 @@ table.scanlist {
 
 table.scanlist th {
     border-width: 1px 1px 1px 1px;
-    padding: 5px 5px 5px 5px;
+    padding: 5px 2.5px 5px 2.5px;
     border-style: dotted dotted dotted dotted;
     border-color: gray gray gray gray;
 }
 
 table.scanlist td {
     border-width: 1px 1px 1px 1px;
-    padding: 5px 5px 5px 5px;
+    padding: 5px 2.5px 5px 2.5px;
     border-style: dotted dotted dotted dotted;
     border-color: gray gray gray gray;
 }
